--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ reqwest = { version = "0.12", features = [
     "stream",
 ], default-features = false, optional = true }
 dotenv = "0.15.0"
+dirs = "5.0.1"
