--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ reqwest = { version = "0.12", features = [
 ], default-features = false, optional = true }
 dotenv = "0.15.0"
 dirs = "5.0.1"
+range_check = "0.2"
