--- a/src/data/.env.test
+++ b/src/data/.env.test
@@ -1,6 +1,6 @@
 BUFFER_SIZE=
-COMPRESSION_METHOD=lz4
-COMPRESSION_LEVEL=9
+COMPRESSION_METHOD=
+COMPRESSION_LEVEL=
 DOMAIN=foo.bar.baz
 FILE_PREFIX=company
 FOLDER=
