--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run tests
         run: |
-          cargo test --verbose
+          cargo test --verbose --test-threads=1
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
