--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,12 +23,13 @@ jobs:
           export-env: false
         env:
           OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
-          VAULT_URL: op://Production/AzureKeyVaultTest/credentials/url
+          SECRET_MANAGER_URL: op://Production/AzureKeyVaultTest/credentials/url
 
       - uses: actions/checkout@v4
       - name: Run tests
         run: |
           cargo test --verbose
+          AZURE_KEY_VAULT_TEST: ${{ env.SECRET_MANAGER_URL }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
