--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,16 +20,17 @@ jobs:
         id: op-load-secret
         uses: 1password/load-secrets-action@v2
         with:
-          export-env: false
+          export-env: true
         env:
           OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
-          SECRET_MANAGER_URL: op://Production/AzureKeyVaultTest/credentials/url
+          AZURE_KEY_VAULT_TEST: op://Production/AzureKeyVaultTest/credentials/url
 
       - uses: actions/checkout@v4
       - name: Run tests
+        env:
+          GITHUB_ACTIONS: true
         run: |
           cargo test --verbose
-          AZURE_KEY_VAULT_TEST: ${{ env.SECRET_MANAGER_URL }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
