--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ reqwest = { version = "0.12", features = [
 range_check = "0.2"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+tempfile = "3.13"
 time = { version = "0.3", features = ["macros"] }
 tokio = { version = "1", features = ["full"] }
 url = "2.5"
