--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ async-trait = "0.1"
 azure_core = { version = "0.20", features = ["enable_reqwest_rustls"] }
 azure_identity = { version = "0.20", default-features = false }
 azure_security_keyvault = "0.20.0"
+chrono = "0.4"
 clap = { version = "4.5", features = ["derive"] }
 dirs = "5.0.1"
 dotenv = "0.15.0"
@@ -21,6 +22,5 @@ range_check = "0.2"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tempfile = "3.13"
-time = { version = "0.3", features = ["macros"] }
 tokio = { version = "1", features = ["full"] }
 url = "2.5"
