--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ dirs = "5.0.1"
 dotenv = "0.15.0"
 futures = "0.3"
 hickory-resolver = "0.24"
+hostname_resolver = "0.1.0"
 reqwest = { version = "0.12", features = [
     "stream",
 ], default-features = false, optional = true }
